# mcp-garmin

./: .copier-answers.yml  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: check-version-bump.sh
src/garmin_mcp/: __init__.py  auth.py  client.py  formatting.py  server.py  transforms.py  validation.py
tests/: test_client.py  test_formatting.py  test_server.py  test_transforms.py  test_validation.py
