[project]
name = "mcp-garmin"
version = "0.2.1"
description = "MCP server for Garmin Connect health and fitness data"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Matthew O'Brien", email = "obrien.mlotwis@gmail.com" }
]
requires-python = ">=3.14"
keywords = ["mcp", "garmin", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "mcp>=1.27.0,<2",
    "garminconnect>=0.2.25",
]

[project.urls]
Repository = "https://github.com/obrien-matthew/mcp-garmin"
Issues = "https://github.com/obrien-matthew/mcp-garmin/issues"

[tool.uv.build-backend]
module-name = "garmin_mcp"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "pyright>=1.1.400",
    "pytest>=8.0",
    "pytest-cov>=6.0",
]

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["garmin_mcp"]
omit = ["src/garmin_mcp/auth.py"]

[project.scripts]
mcp-garmin = "garmin_mcp:main"
mcp-garmin-login = "garmin_mcp:login"
